--- a/src/drafting/styles.scss
+++ b/src/drafting/styles.scss
@@ -378,7 +378,7 @@
         }
         
         .error-container {
-          margin-bottom: 0.75rem;
+          margin-bottom: 1.25rem;
           .flex-row {
             flex-wrap: wrap;
 
